# nRF5340_USB_Audio

./: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  Kconfig.defaults  Kconfig.sysbuild  README.md  README.rst  overlay-bt_ll_sw_split.conf  prj.conf  sample.yaml  sysbuild.cmake
boards/arm/nrf5340dk/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf5340_cpuapp_common-pinctrl.dtsi  nrf5340_cpuapp_common.dtsi  nrf5340_cpuapp_partition_conf.dtsi  nrf5340_cpunet_reset.c  nrf5340_shared_sram_planning_conf.dtsi  nrf5340dk_cpuapp.dts  nrf5340dk_cpuapp.yaml  nrf5340dk_cpuapp_defconfig  nrf5340dk_cpuapp_ns.dts  nrf5340dk_cpuapp_ns.yaml  nrf5340dk_cpuapp_ns_defconfig  nrf5340dk_cpunet-pinctrl.dtsi  nrf5340dk_cpunet.dts  nrf5340dk_cpunet.yaml  nrf5340dk_cpunet_defconfig  pre_dt_board.cmake
boards/arm/nrf5340dk/doc/: index.rst
src/: Kconfig  app_main.c  audio_i2s.c  audio_i2s.h  audio_usb.c  audio_usb.h  hal_gpio.c  hal_gpio.h  hal_i2s copy.c  hal_i2s.c  hal_i2s.h  hal_uart.c  hal_uart.h
